# cdkg

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml
cdkg/cli/: cli.py
cdkg/representation/: __init__.py
cdkg/representation/base/: __init__.py  activity.py  digital.py  event.py  group.py  person.py  podcast.py  set.py  text.py  visual.py
cdkg/representation/extra/: __init__.py  enrichment.py
data/domain/base/: cdkg.ttl
data/domain/base/Activity/presentation/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  4.json  5.json  6.json  7.json  8.json  9.json
data/domain/base/DigitalObject/recording/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  4.json  5.json  6.json  7.json  8.json  9.json
data/domain/base/Event/programme/: connected-data-world-2021.json  knowledge-connexions-2020.json
data/domain/base/Group/speaker/: atanas-kiryakov-and-vassil-momtchev.json  david-amzallag-and-szymon-klarman.json  juan-sequeda-and-bryon-jacob.json  omar-khan-and-david-newman.json
data/domain/base/LinguisticObject/podcast/: 12.json  17.json  20.json  23.json  30.json  5.json
(+117 files in other folders)
